# real-state-agent-helper

real-state-agent-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
real-state-agent-fastapi/agent/: dependencies.py  router.py
real-state-agent-fastapi/agent/models/: __init__.py  call_request.py  call_response.py  real_estate_agent.py
real-state-agent-fastapi/agent/repositories/: __init__.py  matching_repository.py
real-state-agent-fastapi/agent/usecases/: __init__.py  schedule_call_with_another_real_state_agent.py  suggest_meeting_time.py
real-state-agent-fastapi/alembic/: env.py
real-state-agent-fastapi/auth/: dependencies.py  router.py
real-state-agent-fastapi/auth/models/: auth_response.py
real-state-agent-fastapi/auth/repositories/: auth_repository.py
real-state-agent-fastapi/auth/usecases/: __init__.py  login_user.py  register_user.py
real-state-agent-fastapi/core/: __init__.py  database.py  dependencies.py  exceptions.py  model_loader.py  settings.py
real-state-agent-fastapi/core/repositories/: __init__.py  llm_repository.py
real-state-agent-fastapi/property/: dependencies.py  router.py
real-state-agent-fastapi/property/entities/: __init__.py  property.py  property_model.py
real-state-agent-fastapi/property/repositories/: property_repository.py
real-state-agent-fastapi/property/schemas/: __init__.py  property_create_response.py  property_create_resquest.py
real-state-agent-fastapi/real_state_agent/: dependencies.py  router.py
(+9 files in other folders)
